# crewtest

./: README.md  analysis.md  final_article.md  pyproject.toml  report.md
src/benai/: crew.py  main.py
src/benai/config/: agents.yaml  tasks.yaml
