[project]
name = "benai"
version = "0.1.0"
description = "benai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0",
    "pathlib>=1.0.1",
]

[project.scripts]
benai = "benai.main:run"
run_crew = "benai.main:run"
train = "benai.main:train"
replay = "benai.main:replay"
test = "benai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
